lib/tests/fixtures/compiler/parser/return_in_resource_decl.baseline
Error: return_in_resource_decl.pp:3:26: return statement cannot be used inside a resource declaration expression.
  bar => if true { return }
                   ^~~~~~
