lib/tests/fixtures/compiler/parser/return_in_resource_decl.pp
function foo {
    file { foo:
        bar => if true { return }
    }
}
